--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "install": "^0.13.0",
+    "npm": "^9.6.5",
     "sass": "^1.62.0",
     "typescript": "^5.0.4"
   }
