--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
+    "styled-components": "^5.3.11",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "eslint": "^8.38.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
