--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .ts,.tsx . ",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "sb": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,8 +53,18 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.22",
+    "@storybook/addon-interactions": "^7.0.22",
+    "@storybook/addon-links": "^7.0.22",
+    "@storybook/blocks": "^7.0.22",
+    "@storybook/preset-create-react-app": "^7.0.22",
+    "@storybook/react": "^7.0.22",
+    "@storybook/react-webpack5": "^7.0.22",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/mdx": "^2.0.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.38.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -60,9 +72,13 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.12",
     "install": "^0.13.0",
     "npm": "^9.6.5",
+    "prop-types": "^15.8.1",
     "sass": "^1.62.0",
-    "typescript": "^5.0.4"
+    "storybook": "^7.0.22",
+    "typescript": "^5.0.4",
+    "webpack": "^5.87.0"
   }
 }
